# Gradual-Dependent-Python

./: Cargo.toml  test.py  test2.py
notebook/: Approximate-Normalization.md  Dependent-Syntax.md  Hereditary-Substitution.md  Mutability.md  Scope.md  Soundness.md  Type-Checking-Limitations.md
python_scripts/: checker.py  gdp_runtime_utils.py  gdp_stdlib.py  gdp_typecheck_utils.py  gdp_utils.py  main.py  type_printer.py
src/: main.rs
src/compiler/: mod.rs
src/type_checker/: inference.rs  mod.rs
